# Realestate_Management_Apps

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  dev-start.command  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: .mcp.json  loop.md  settings.json
.claude/commands/: commit-push-pr.md  daily-report.md  diagnose.md  handoff.md  wrap-up.md
.claude/hooks/: block-background-devserver.sh
.claude/memory/: MEMORY.md  project_context.md
.claude/rules/: claude-code-background-shell.md  general.md
.project-manager/: config.json
docs/architecture/: ADR-001-initial-architecture.md  ADR-002-tauri-service-architecture.md  ADR-003-tauri-2-adoption.md  ADR-004-local-storage-and-secret.md  ADR-005-frontend-react-stack.md  ADR-006-database-supabase-self-hosted.md  ADR-009-production-bundle-and-signing.md  ADR-010-write-path-service-role.md  README.md  data-model-v0.md  data-model-v1.md  frontend-and-db-trade-offs.md  property-document-boundary.md
docs/deployment/: README.md  internal-server-plan.md
docs/design/: shared-ai-desktop-style.md
docs/integrations/: README.md  saydo-input-contract-v0.md  (+1 more)
scripts/: standards-check.sh  standards-fix.sh
src/: main.tsx  router.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260518000000_create_property_summary_cache.sql
src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: app.rs  mod.rs  plugin.rs  property.rs  server.rs
src-tauri/src/services/: config.rs  local_db.rs  mod.rs  property_cache.rs  property_service.rs  server_client.rs
(+67 files in other folders)
