[package]
name = "realestate-management-apps"
version = "0.1.0"
description = "Rust + Tauri desktop rebuild of the real estate management product"
authors = ["Project lead"]
edition = "2021"

[lib]
name = "realestate_management_apps_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
